Bone shrinkwrap constraint in project mode does not respect pose space; acts in bone's local space #43204

Closed
opened 2015-01-11 12:39:16 +01:00 by Tom Benedett · 8 comments

System Information
Windows 7 64-bit, GTX 580

Blender Version
Broken: BuildBot 2.73.1 8a28895 (Jan. 3rd, 2015), also BuildBot 2.72.2 5c6e33 (Nov. 11th, 2014)
Worked: BuildBot 2.71 b49e6d0 (Jun. 19th, 2014)

Short description of error
If I set a shrinkwrap constraint on a bone and set it to project in the +Z direction in pose space (the armature object's local space, if I'm not mistaken,) it will instead be projected to the target in the +Z direction in the bone's local space.

Exact steps for others to reproduce the error
Armature_Shrinkwrap_Axis_Misalignment.blend
Observe the behavior of the three bones in the same armature - all are meant to be projected to the landscape above, but the one whose local axes aren't aligned with the armature object's axes isn't projected up when the constraint is set to project it in the pose space's +Z direction. It is instead projected sideways, in the +Z direction in the bone's local space.

**System Information** Windows 7 64-bit, GTX 580 **Blender Version** Broken: BuildBot 2.73.1 8a28895 (Jan. 3rd, 2015), also BuildBot 2.72.2 5c6e33 (Nov. 11th, 2014) Worked: BuildBot 2.71 b49e6d0 (Jun. 19th, 2014) **Short description of error** If I set a shrinkwrap constraint on a bone and set it to project in the +Z direction in pose space (the armature object's local space, if I'm not mistaken,) it will instead be projected to the target in the +Z direction in the bone's local space. **Exact steps for others to reproduce the error** [Armature_Shrinkwrap_Axis_Misalignment.blend](https://archive.blender.org/developer/F136629/Armature_Shrinkwrap_Axis_Misalignment.blend) Observe the behavior of the three bones in the same armature - all are meant to be projected to the landscape above, but the one whose local axes aren't aligned with the armature object's axes isn't projected up when the constraint is set to project it in the pose space's +Z direction. It is instead projected sideways, in the +Z direction in the bone's local space.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @moak

Added subscriber: @moak
Bastien Montagne self-assigned this 2015-01-11 12:55:47 +01:00

Yeah, would look like this setting is not used at all actually… checking.

Yeah, would look like this setting is not used at all actually… checking.

So, own fault in b154aa8c06, to fix #42447… Now have to find a good solution for this, and stop being stupid (like forgetting constraints can also be used for bones xD ).

So, own fault in b154aa8c06, to fix #42447… Now have to find a good solution for this, and stop being stupid (like forgetting constraints can also be used for bones xD ).

This issue was referenced by 599c8a2c8e

This issue was referenced by 599c8a2c8e4cf1f904c5422916ebfd8d12eebe69

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 599c8a2c8e.

Closed by commit 599c8a2c8e.

This issue was referenced by ba43ea24a7

This issue was referenced by ba43ea24a72ceb3b098c7ae0b10e03795fa2a1ea
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43204
No description provided.